[tool.poetry]
name = "catmeow"
version = "0.2.1"
description = ""
authors = ["Sergey Royz <zjor.se@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^50.3.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
catmeow = "catmeow:main"
