[tool.poetry]
name = "catmeow"
version = "0.2.2"
description = "Simple CLI-application demostrating packaging and distibution"
authors = [
  "Sergey Royz <zjor.se@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zjor/catmeow"
repository = "https://github.com/zjor/catmeow"
documentation = "https://zjor.medium.com/packaging-a-runnable-python-module-de43ac12148"

keywords = ["packaging", "distribution", "cli-tool"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^50.3.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
catmeow = "catmeow:main"
